--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -1205,6 +1205,7 @@ ANVIL:
     resultItem: 寒霜头盔
     requireItem:
     - 神圣锭:10
+    - 灾劫核心
     - 寒霜核
     recipeCategory: ARMOR
   '133':
@@ -1212,6 +1213,7 @@ ANVIL:
     resultItem: 寒霜胸甲
     requireItem:
     - 神圣锭:20
+    - 灾劫核心
     - 寒霜核
     recipeCategory: ARMOR
   '134':
@@ -1219,6 +1221,7 @@ ANVIL:
     resultItem: 寒霜护腿
     requireItem:
     - 神圣锭:16
+    - 灾劫核心
     - 寒霜核
     recipeCategory: ARMOR
   '135':
