--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/EntityModel.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/EntityModel.yml
@@ -96,20 +96,20 @@
   texture: "装甲风暴编织者/头/head.png"
   scale: 100
   renderAlways: true
-装甲风暴编织者体节:
-  entity: "装甲风暴编织者体节"
-  contains: false
-  model: "装甲风暴编织者/体节/body.obj"
-  texture: "装甲风暴编织者/体节/body.png"
-  scale: 100
-  renderAlways: true
-装甲风暴编织者尾:
-  entity: "装甲风暴编织者尾"
-  contains: false
-  model: "装甲风暴编织者/体节/body.obj"
-  texture: "装甲风暴编织者/体节/body.png"
-  scale: 100
-  renderAlways: true
+# 装甲风暴编织者体节:
+#   entity: "装甲风暴编织者体节"
+#   contains: false
+#   model: "装甲风暴编织者/体节/body.obj"
+#   texture: "装甲风暴编织者/体节/body.png"
+#   scale: 100
+#   renderAlways: true
+# 装甲风暴编织者尾:
+#   entity: "装甲风暴编织者尾"
+#   contains: false
+#   model: "装甲风暴编织者/体节/body.obj"
+#   texture: "装甲风暴编织者/体节/body.png"
+#   scale: 100
+#   renderAlways: true
 风暴编织者头:
   entity: "风暴编织者头"
   contains: false
@@ -117,20 +117,20 @@
   texture: "风暴编织者/头/head.png"
   scale: 100
   renderAlways: true
-风暴编织者体节:
-  entity: "风暴编织者体节"
-  contains: false
-  model: "风暴编织者/体节/body.obj"
-  texture: "风暴编织者/体节/body.png"
-  scale: 100
-  renderAlways: true
-风暴编织者尾:
-  entity: "风暴编织者尾"
-  contains: false
-  model: "风暴编织者/体节/body.obj"
-  texture: "风暴编织者/体节/body.png"
-  scale: 100
-  renderAlways: true
+# 风暴编织者体节:
+#   entity: "风暴编织者体节"
+#   contains: false
+#   model: "风暴编织者/体节/body.obj"
+#   texture: "风暴编织者/体节/body.png"
+#   scale: 100
+#   renderAlways: true
+# 风暴编织者尾:
+#   entity: "风暴编织者尾"
+#   contains: false
+#   model: "风暴编织者/体节/body.obj"
+#   texture: "风暴编织者/体节/body.png"
+#   scale: 100
+#   renderAlways: true
 神明吞噬者头:
   entity: "神明吞噬者头"
   contains: false
