--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/SlotConfig.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/SlotConfig.yml
@@ -89,6 +89,18 @@ Script:
       }
       return false;
     }
+    function isSwitchable(itemStack){
+      var lore = itemStack.getItemMeta().getLore();
+      if(lore!=null){
+        for(var i=0;i<lore.size();i++){
+          var line = lore.get(i);
+          if(line!=null && line.contains("算作转换类饰品")){
+            return true;
+          }
+        }
+      }
+      return false;
+    }
     function hasAccessoryConflictSingle(currItem, otherAccessoryName){
       if (currItem == otherAccessoryName) return true;
       switch(currItem) {
@@ -210,6 +222,15 @@ Script:
         for (var i = 0; i < otherAccessories.length; i ++) {
           var otherAcc = otherAccessories[i];
           if (isBalloon(otherAcc) === true) {
+            return false;
+          }          
+        }
+      }
+      // do not allow multiple switchables
+      if (isSwitchable(itemStack) === true) {
+        for (var i = 0; i < otherAccessories.length; i ++) {
+          var otherAcc = otherAccessories[i];
+          if (isSwitchable(otherAcc) === true) {
             return false;
           }          
         }
