--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -300,6 +300,8 @@ deathMessages:
   NegRegen_魔能谐振仪:
   - <victim> 的生命完全升华为了魔力
   - <victim> 与魔力合为一体
+  NegRegen_龙心吊坠:
+  - <victim> 过于迷恋巨龙之力
   NegRegen_魔能过载仪:
   - <victim> 的身形被过载的魔法摧毁了
   NegRegen_幻灭心元石:
