resource pack update

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -234,6 +234,10 @@ skins.233=233
 skins.234=234
 skins.235=235
 skins.236=236
+skins.237=237
+skins.238=238
+skins.239=239
+skins.240=240
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -471,3 +475,7 @@ name.233=\u4eb5\u6e0e\u5b88\u536b\u00b7\u7edf\u5fa1
 name.234=\u4eb5\u6e0e\u5b88\u536b\u00b7\u795e\u77f3
 name.235=\u4eb5\u6e0e\u5b88\u536b\u00b7\u5723\u6676
 name.236=\u4eb5\u6e0e\u5ca9
+name.237=\u75f4\u611a\u91d1\u9f99
+name.238=\u4eb5\u6e0e\u5929\u795e\uff0c\u666e\u7f57\u7ef4\u767b\u65af
+name.239=\u65e0\u5c3d\u865a\u7a7a
+name.240=\u6697\u80fd\u91cf
