--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -770,6 +770,18 @@
         - "神圣之火"
         - "夜魇"
         - "弑神怒焰"
+神之使徒西格纳斯:
+    soundDamaged: entity.hit.otherworldly
+    buffInflict:
+        - "死亡低语|150|1"
+    buffImmute:
+        - "狱炎"
+        - "辐射"
+        - "带电"
+        - "破晓"
+        - "神圣之火"
+        - "夜魇"
+        - "弑神怒焰"
 哥布林战士:
     drop:
         - "铜币:375:375:1"
