signus, polterghast and old duke resource pack

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/ethereal_subjugator_projectile.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/ethereal_subjugator_projectile.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj1_5
 texture=ethereal_subjugator_projectile
-nbt.display.Name=\u5e7d\u82b1\u8ffd\u8e2a\u80fd\u91cf\u5f39
+nbt.display.Name=regex:\u5e7d\u82b1\u8ffd\u8e2a\u80fd\u91cf\u5f39|\u5e7d\u82b1\u5b50\u6bcd\u5f39
