--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -238,6 +238,11 @@ skins.237=237
 skins.238=238
 skins.239=239
 skins.240=240
+skins.241=241
+skins.242=242
+skins.243=243
+skins.244=244
+skins.245=245
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -479,3 +484,8 @@ name.237=\u75f4\u611a\u91d1\u9f99
 name.238=\u4eb5\u6e0e\u5929\u795e\uff0c\u666e\u7f57\u7ef4\u767b\u65af
 name.239=\u65e0\u5c3d\u865a\u7a7a
 name.240=\u6697\u80fd\u91cf
+name.241=\u795e\u4e4b\u4f7f\u5f92\u897f\u683c\u7eb3\u65af
+name.242=\u566c\u9b42\u5e7d\u82b1
+name.243=\u566c\u9b42\u5e7d\u82b1\u00a71
+name.244=regex:\u566c\u9b42\u5e7d\u82b1\u00a72|\u566c\u9b42\u5e7d\u82b1\u514b\u9686\u4f53
+name.245=\u786b\u6d77\u9057\u7235
