--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/old_duke_vortex.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/old_duke_vortex.properties
@@ -1,5 +1,5 @@
 type=item
 items=438
-model=_proj4
+model=_proj0_5
 texture=old_duke_vortex
-nbt.display.Name=\u9057\u7235\u786b\u6d77\u65cb\u6da1
+nbt.display.Name=\u9057\u7235\u786b\u6d77\u6f29\u6da1_1
