yharon update and NPC rewrite

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -2,7 +2,7 @@ messages:
   向导:
     玩法提示:
       texts:
-      - BOSS会将召唤者附近所有达成挑战所需游戏进度的玩家视为敌人并以此获得生命加成。因此请尽量邀请世界中所有符合挑战资格的玩家一同作战，这样会大大增强成功率。造成伤害足够的玩家都将自动获得一份战利品哦~
+      - BOSS会将召唤者附近所有达成挑战所需游戏进度的玩家视为敌人并以此获得生命加成。因此请尽量邀请世界中所有符合挑战资格的玩家一同作战，这样会大大增强成功率。造成伤害或仇恨时长足够的玩家都将自动获得一份战利品哦~
       - 右键基岩时可以进入上一层或下一层世界
     新手期:
       deactivate_progress: "克苏鲁之眼"
@@ -71,19 +71,44 @@ messages:
       texts:
       - 硫磺海下的深渊中有一种坚硬炽热的矿石，请利用石巨人掉落的镐尝试挖掘。
       - 丛林地下偶尔会出现松露虫，用它在海里钓鱼可能会引出庞然大物！
+      - 魔君的敌人曾在绝望中召唤出了一尊活跃至今的恐怖巨像。传言他们成为了巨像脚下的第一批亡魂……
       - 反抗者仅仅为抵抗嘉登，融合死去同伴的血肉和黑魔法制成了怪物。它践踏了所见的一切，包括制作者本人。
       - 你听说过拜月教吗？据说他们的信徒最近开始出现在地牢里。一定要小心，他们看起来令人毛骨悚然！
     月球领主后:
       activate_progress: "月球领主"
-      deactivate_progress: "噬魂幽花"
+      deactivate_progress: "亵渎天神，普罗维登斯"
       texts:
-      - 恭喜你，你已经渐渐成为世界上最强的存在了。月球领主后的内容正在制作中，相信不久的将来将会和大家相遇！
+      - 巨龙的复制品在漫无目的地游荡在丛林中。你接下来的冒险想必将布满危险，先用它练练手并且提升实力吧！
+      - 亵渎天神……祂的守卫在神圣之地发觉了你的力量。倘若击杀这些守卫的话，你将直面天神的怒火！
+    亵渎天神后:
+      activate_progress: "亵渎天神，普罗维登斯"
+      deactivate_progress: "神明吞噬者"
+      texts:
+      - 地牢中的灵魂聚集在一起，创造了一个奇特的灵魂聚合体。小心；它并非善类！
+      - 据传，硫磺海中有一只年迈的猪鲨。它的年龄并未减缓它的速度；相反，常年累积的战斗经验和硫磺海带来的异变使他异常棘手。
+      - 亵渎天神的落败惊扰了宇宙之虫的仆从们。
+    神明吞噬者后:
+      activate_progress: "神明吞噬者"
+      deactivate_progress: "丛林龙，犽戎"
+      texts:
+      - 宇宙之虫所吞噬的力量已为你所用；它们应该可以大幅度提升你的实力。
+      - 犽戎是魔君儿时起最忠诚的伙伴，一只巨龙。你或许已经具备了挑战他的能力。
+    星流巨械前:
+      activate_progress: "丛林龙，犽戎"
+      deactivate_progress: "星流巨械"
+      texts:
+      - 嘉登是魔君的匠人。他的造物已超越了人类的一切认知，甚至足以击败神明。
+    至尊灾厄前:
+      activate_progress: "丛林龙，犽戎"
+      deactivate_progress: "至尊灾厄"
+      texts:
+      - 硫火女巫，灾厄。在魔君的支配下缔造了无边的罪业。千万小心；被蒸干的大海只是她能力的冰山一角。
   哥布林工匠:
     tier: 哥布林军团
     deny:
     - <name>，你现在的装备还不值得我去重铸。打败外面追杀我的哥布林军团证明自己吧！
     - 至少帮我赶走我那群烦死个人的同胞再来找我吧……我现在很忙……忙着研究新产品，也忙着逃命！
-    - 我那群哥布林同族觉得我是异类，还说什么拂晓出发一起冲过来把我带回去炖汤喝！<name>，你能帮我吗？
+    - 我那群哥布林同族觉得我是异类，还说要一大早把我拿来炖汤喝！<name>，你能帮我吗？
     trade:
     - <name>，你有什么需要重铸的吗？我可以帮你刷新武器和饰品的前缀哦~
     - 你不觉得那边的电工妹很酷吗，<name>？
@@ -102,7 +127,7 @@ messages:
       2:
       - 告诉过你玩史莱姆要小心点了，你来晚点手就要化成水了！
       - 这还不是最糟糕的……我见过比这惨的……
-      - 马老师，发生肾摸逝了？
+      - <name>老师，发生肾摸逝了？
       - 你又去哪鬼混了？
       3:
       - 别磨蹭了<name>，要治疗就快过来，要等死就跑远点！
@@ -112,7 +137,6 @@ messages:
     healthy:
     - 我不是美容师，所以现在我帮不了忙
     - 不知道为什么，向导同志总是被岩浆烫伤。他也太不小心了吧！
-    - 军火商他是不是喜欢我呢？
     - 你帮我问问军火商……额，需不需要……治疗？
     - 又是普普通通的一天呢……但这样也没什么不好的嘛！
     - 我梦到了在月亮变成血红色的晚上，我赚了个盆满钵满！
@@ -157,8 +181,8 @@ messages:
     - 请帮我解除诅咒……太痛苦了……
     - 被诅咒的时候好无聊，只能做点针线活打发时间……
     - 好兄弟，帮我解除诅咒吧！
+    - 不要贸然进入地牢，否则必将受到电刑的调教……
     trade:
-    - 护士这小妞针不戳，如果我还年轻一定会约她……可惜我已经老了啊……
     - <name>，再次感谢你帮我解除诅咒！感觉像是被什么东西跳起来咬了一口。
     - <name>，来看看我刚做好的服装吗？或者……你是来陪我这个老人聊天的？
     - 看好了，这样可以完整的抽出蛛丝中坚韧的线，制成的丝绸坚韧又光滑！
