--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -902,6 +902,17 @@
         - "神圣之火"
         - "夜魇"
         - "弑神怒焰"
+丛林龙，犽戎:
+    buffInflict:
+        - "龙焰|120|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "破晓"
+        - "龙焰"
+烈焰龙卷:
+    buffInflict:
+        - "龙焰|80|1"
 哥布林战士:
     drop:
         - "铜币:375:375:1"
