--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -243,6 +243,7 @@ skins.242=242
 skins.243=243
 skins.244=244
 skins.245=245
+skins.246=246
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -489,3 +490,4 @@ name.242=\u566c\u9b42\u5e7d\u82b1
 name.243=\u566c\u9b42\u5e7d\u82b1\u00a71
 name.244=regex:\u566c\u9b42\u5e7d\u82b1\u00a72|\u566c\u9b42\u5e7d\u82b1\u514b\u9686\u4f53
 name.245=\u786b\u6d77\u9057\u7235
+name.245=\u4e1b\u6797\u9f99\uff0c\u72bd\u620e
