artemis & apollo hover movement

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -39,10 +39,10 @@ rarity:
   '1000': §l
   '1100': §#C94622§l
 titleMessages:
-- 我的世界：回忆《忘却的旋律》
+- 我的世界：忘却的旋律
 - 我的世界：试试《泰拉瑞亚》！
-- 我的世界：怀念我的金坷垃
-- 我的世界：世界有三个维度，不适合⑨岁玩家游玩
+- 我的世界：不要打架，不要打架！
+- 我的世界：世界有2+1个维度，不适合⑨岁玩家游玩
 - 泰拉瑞亚：试试《我的世界》！
 - 泰拉瑞亚：也试试饥荒吧！
 - 泰拉瑞亚：试试《旷野之息》！
