exo mechs sprite

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/ares_exoskeleton_gauss_nuke.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/ares_exoskeleton_gauss_nuke.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj2
 texture=ares_exoskeleton_gauss_nuke
-nbt.display.Name=\u963f\u745e\u65af\u5916\u9aa8\u9abc\u9ad8\u65af\u6838\u5f39
+nbt.display.Name=regex:\u963f\u745e\u65af\u5916\u9aa8\u9abc\u9ad8\u65af\u6838\u5f39|\u661f\u6d41\u9ad8\u65af\u6838\u5f39
