--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/ares_exoskeleton_tesla_sphere.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/ares_exoskeleton_tesla_sphere.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj1_5
 texture=ares_exoskeleton_tesla_sphere
-nbt.display.Name=\u963f\u745e\u65af\u5916\u9aa8\u9abc\u7403\u72b6\u95ea\u7535
+nbt.display.Name=regex:\u963f\u745e\u65af\u5916\u9aa8\u9abc\u7403\u72b6\u95ea\u7535|\u7279\u65af\u62c9\u661f\u6d41\u95ea\u7535
