--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -244,6 +244,15 @@ skins.243=243
 skins.244=244
 skins.245=245
 skins.246=246
+skins.246=247
+skins.246=248
+skins.246=249
+skins.246=250
+skins.246=251
+skins.246=252
+skins.246=253
+skins.246=254
+skins.246=255
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -491,3 +500,12 @@ name.243=\u566c\u9b42\u5e7d\u82b1\u00a71
 name.244=regex:\u566c\u9b42\u5e7d\u82b1\u00a72|\u566c\u9b42\u5e7d\u82b1\u514b\u9686\u4f53
 name.245=\u786b\u6d77\u9057\u7235
 name.246=\u4e1b\u6797\u9f99\uff0c\u72bd\u620e
+name.247=XS-01\u201c\u963f\u5c14\u5fd2\u5f25\u65af\u201d
+name.248=XS-03\u201c\u963f\u6ce2\u7f57\u201d
+name.249=XS-01\u201c\u963f\u5c14\u5fd2\u5f25\u65af\u201d\u00a71
+name.250=XS-03\u201c\u963f\u6ce2\u7f57\u201d\u00a71
+name.251=XF-09\u201c\u963f\u745e\u65af\u201d
+name.252=XF-09\u201c\u963f\u745e\u65af\u201d\u9ad8\u65af\u6838\u5f39\u53d1\u5c04\u4e95
+name.253=XF-09\u201c\u963f\u745e\u65af\u201d\u956d\u5c04\u52a0\u519c\u70ae
+name.254=XF-09\u201c\u963f\u745e\u65af\u201d\u79bb\u5b50\u52a0\u519c\u70ae
+name.255=XF-09\u201c\u963f\u745e\u65af\u201d\u7279\u65af\u62c9\u52a0\u519c\u70ae
