--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -80,6 +80,7 @@ titleMessages:
 - 泰拉瑞亚：Red开发救赎
 - 泰拉瑞亚：有矿自有天相
 - 泰拉瑞亚：大地边境
+- 泰拉瑞亚：亡了亡了，我没有急支糖浆啊
 - 泰拉瑞亚：很有精神！
 - 泰拉瑞亚：哇真的是你呀
 - 泰拉瑞亚：我不知道--啊啊啊~哎呦~！
@@ -98,6 +99,8 @@ titleMessages:
 - 泰拉瑞亚：你知道我要说什么
 - 泰拉瑞亚：新手围观老手似
 - 泰拉瑞亚：花朵艳丽，终将消散
+- 泰拉瑞亚：呱！你不要点它口牙！（指BOSS召唤物）
+- 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
 - 泰拉瑞亚：1997年，我学会了开矿车
 - 泰拉瑞亚：灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
 - 泰拉瑞亚：灾厄：欢迎来到灾厄！
