Ares arms projectile firing mechanism

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -1,5 +1,5 @@
 worldGen:
-  seed: 1145141919810
+  seed: 235674819
   caveGenDurationLog: false
   caveSketchSize: 3
   caveSketchThreads: 4
@@ -54,6 +54,7 @@ titleMessages:
 - 泰拉瑞亚：试试《地牢守护者2》！
 - 泰拉瑞亚：逝逝《守望先锋》？
 - 泰拉瑞亚：被沙子制服了
+- 泰拉瑞亚：黑曜石被制服了
 - 泰拉瑞亚第3部分：向导归来
 - 泰拉瑞亚：泰拉瑞亚：泰拉瑞亚：
 - 泰拉瑞亚：按alt-f4
@@ -99,6 +100,7 @@ titleMessages:
 - 泰拉瑞亚：你知道我要说什么
 - 泰拉瑞亚：新手围观老手似
 - 泰拉瑞亚：花朵艳丽，终将消散
+- 泰拉瑞亚：强而有力，强而有力口牙！
 - 泰拉瑞亚：呱！你不要点它口牙！（指BOSS召唤物）
 - 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
 - 泰拉瑞亚：1997年，我学会了开矿车
