bullet hell projectile
bullet hell encapsulated with projectile. This is the first draft.

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -108,6 +108,7 @@ titleMessages:
 - 泰拉瑞亚：灾厄：欢迎来到灾厄！
 - 泰拉瑞亚：灾厄：查询山猪喝醉没
 - 泰拉瑞亚：灾厄：谁还能玩就削谁
+- 泰拉瑞亚：灾厄：看我回血
 deathMessages:
   Generic:
   - <victim> 的肠子被扯出来了
