Player POV mechanism draft

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -13905,7 +13905,7 @@ Dodu的手炮:
   item: PAPER
   lore:
   - §2右键打开垃圾桶
-  - §2拾取物品时，若垃圾桶中有同类物品则直接销毁
+  - §2获得物品时，若垃圾桶中有同类物品则直接销毁
   - §c警告：不同宝藏袋均视为同类物品，请勿将宝藏袋放入垃圾桶
   worth: 2000000
   rarity: 3
