bullet hell tweak

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -14067,7 +14067,7 @@ Dodu的手炮:
   lore:
   - §a免疫摔落伤害
   - §a15分钟持续时间
-  - §r“想你了，钙质药水”
+  - §r“钙质药水，没有你我该怎么活啊！”
   worth: 20000
   rarity: 3
 虫潮药水:
