--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -101,9 +101,10 @@ titleMessages:
 - 泰拉瑞亚：新手围观老手似
 - 泰拉瑞亚：花朵艳丽，终将消散
 - 泰拉瑞亚：强而有力，强而有力口牙！
-- 泰拉瑞亚：呱！你不要点它口牙！（指BOSS召唤物）
+- 泰拉瑞亚：你不要点它口牙！（指BOSS召唤物）
 - 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
 - 泰拉瑞亚：1997年，我学会了开矿车
+- 泰拉瑞亚：灾厄：敢召唤我就三小弟安排你，听到没有
 - 泰拉瑞亚：灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
 - 泰拉瑞亚：灾厄：欢迎来到灾厄！
 - 泰拉瑞亚：灾厄：查询山猪喝醉没
