--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -100,7 +100,8 @@ titleMessages:
 - 泰拉瑞亚：你知道我要说什么
 - 泰拉瑞亚：新手围观老手似
 - 泰拉瑞亚：花朵艳丽，终将消散
-- 泰拉瑞亚：强而有力，强而有力口牙！
+- 泰拉瑞亚：哦，达令，看！你浑身都是坚硬的盔甲口牙！
+- 泰拉瑞亚：BOSS强而有力，强而有力口牙！
 - 泰拉瑞亚：你不要点它口牙！（指BOSS召唤物）
 - 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
 - 泰拉瑞亚：1997年，我学会了开矿车
