--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_hotbar.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_hotbar.yml
@@ -1,7 +1,7 @@
 match: "hud"
 Functions:
   preRender: |-
-    方法.锁定功能('move,jump', 方法.玩家是否飞行() ? 0 : 1000);
+    方法.锁定功能('jump', 方法.玩家是否飞行() ? 0 : 1000);
     方法.锁定功能('turn', 方法.取变量('terraria_pov_locked') == "1" ? 1000 : 0);
     界面变量.r_c_temp=方法.floor(方法.mod(方法.取当前时间(), (90*30)-1) / 30);
     界面变量.r_c = 界面变量.r_c_temp == 0 ? 'FF0000' : 'FF1100';
