--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -1,14 +1,17 @@
 worldGen:
-  seed: 235674819
+  seed: 876239938
   caveGenDurationLog: false
   caveSketchSize: 3
   caveSketchThreads: 4
   caveDetailThreads: 16
   structureNanoSecond: 10000000
+  railYCoordinate: 125
   mapConfig:
     blocksPerPixel: 20
     biomeMarkerRadiusPixel: 2
     spawnMarkerRadiusPixel: 3
+    axisMarkerLengthPixel: 25
+    axisMarkerFontSize: 15
     biomeScanRadiusInBlocks: 5000
     minLabeledBiomeAreaPixels: 50
     gridSizeInPixels: 50
@@ -99,7 +102,6 @@ titleMessages:
 - 泰拉瑞亚：暴风雪绝迹
 - 泰拉瑞亚：你知道我要说什么
 - 泰拉瑞亚：新手围观老手似
-- 泰拉瑞亚：花朵艳丽，终将消散
 - 泰拉瑞亚：哦，达令，看！你浑身都是坚硬的盔甲口牙！
 - 泰拉瑞亚：BOSS强而有力，强而有力口牙！
 - 泰拉瑞亚：你不要点它口牙！（指BOSS召唤物）
@@ -107,6 +109,7 @@ titleMessages:
 - 泰拉瑞亚：1997年，我学会了开矿车
 - 泰拉瑞亚：灾厄：敢召唤我就三小弟安排你，听到没有
 - 泰拉瑞亚：灾厄：为什么一个怕被虫子吞了的飞蛾比虫子强？
+- 泰拉瑞亚：灾厄：花朵艳丽，终将飘散
 - 泰拉瑞亚：灾厄：欢迎来到灾厄！
 - 泰拉瑞亚：灾厄：查询山猪喝醉没
 - 泰拉瑞亚：灾厄：谁还能玩就削谁
