--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -76,7 +76,6 @@ titleMessages:
 - 泰拉瑞亚：Maxx传奇
 - 泰拉瑞亚：查询Red精神状态
 - 泰拉瑞亚：克苏鲁疯了……还失去了一只眼睛！
-- 泰拉瑞亚：生存时长两年半！！
 - 泰拉瑞亚：奥克瑞姆重回江湖！！
 - 泰拉瑞亚：远超生命
 - 泰拉瑞亚：除数为零
@@ -84,17 +83,18 @@ titleMessages:
 - 泰拉瑞亚：Red开发救赎
 - 泰拉瑞亚：有矿自有天相
 - 泰拉瑞亚：大地边境
+- 泰拉瑞亚：兔兔传说
 - 泰拉瑞亚：亡了亡了，我没有急支糖浆啊
 - 泰拉瑞亚：很有精神！
 - 泰拉瑞亚：哇真的是你呀
 - 泰拉瑞亚：我不知道--啊啊啊~哎呦~！
 - 泰拉瑞亚：哎呦你干嘛~~
-- 泰拉瑞亚：现在有更多小黑子！？
-- 泰拉瑞亚：原来你也是OP
+- 泰拉瑞亚：生存时长两年半！
+- 泰拉瑞亚：现在有更多小黑子！
+- 泰拉瑞亚：原来你也玩……
 - 泰拉瑞亚：我明白了，原来你们各个都身怀撅寄啊！！
 - 泰拉瑞亚：ln（0）= 0 / 0
 - 泰拉瑞亚：旅途的终点，不，是旅途的中点！！！
-- 泰拉瑞亚：兔兔传说
 - 泰拉瑞亚：这绝对是最后一次更新
 - 泰拉瑞亚：欢迎来到泰拉瑞亚！
 - 泰拉瑞亚：别对一个东西期望太高，这样你就会有惊喜
@@ -102,7 +102,7 @@ titleMessages:
 - 泰拉瑞亚：暴风雪绝迹
 - 泰拉瑞亚：你知道我要说什么
 - 泰拉瑞亚：新手围观老手似
-- 泰拉瑞亚：哦，达令，看！你浑身都是坚硬的盔甲口牙！
+- 泰拉瑞亚：哦，达令，看！你浑身都是坚硬的盔↑甲口牙！
 - 泰拉瑞亚：BOSS强而有力，强而有力口牙！
 - 泰拉瑞亚：你不要点它口牙！（指BOSS召唤物）
 - 泰拉¤瑞亚：ᕕ(@ x @)ᕗ 耐药性 10秒
