--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_hotbar.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_hotbar.yml
@@ -1,6 +1,12 @@
 match: "hud"
 Functions:
   preRender: |-
+    界面变量.inactive_size = 方法.取屏幕宽度() / 30;
+    界面变量.active_size = 界面变量.inactive_size * 3 / 2;
+    界面变量.margin = 界面变量.inactive_size / 2;
+    界面变量.margin_large = 界面变量.margin * 3 / 2;
+    界面变量.gap = 界面变量.inactive_size / 8;
+    界面变量.hotbar_label_scale = 界面变量.margin / 8;
     方法.锁定功能('jump', 方法.玩家是否飞行() ? 0 : 1000);
     方法.锁定功能('turn', 方法.取变量('terraria_pov_locked') == "1" ? 1000 : 0);
     界面变量.r_c_temp=方法.floor(方法.mod(方法.取当前时间(), (90*30)-1) / 30);
@@ -96,119 +102,138 @@ Functions:
     界面变量.r_c = 界面变量.r_c_temp == 89 ? 'FF0011' : 界面变量.r_c;
 
 槽位1_texture:
-  x: "8"
-  y: "(方法.玩家手持槽==0) ? 8 : 12"
-  width: "(方法.玩家手持槽==0) ? 24 : 16"
-  height: "(方法.玩家手持槽==0) ? 24 : 16"
+  x: "界面变量.margin"
+  y: "(方法.玩家手持槽==0) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==0) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==0) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==0) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位2_texture:
-  x: "(方法.玩家手持槽<1) ? 34 : 26"
-  y: "(方法.玩家手持槽==1) ? 8 : 12"
-  width: "(方法.玩家手持槽==1) ? 24 : 16"
-  height: "(方法.玩家手持槽==1) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap + ((方法.玩家手持槽<1) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==1) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==1) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==1) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==1) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位3_texture:
-  x: "(方法.玩家手持槽<2) ? 52 : 44"
-  y: "(方法.玩家手持槽==2) ? 8 : 12"
-  width: "(方法.玩家手持槽==2) ? 24 : 16"
-  height: "(方法.玩家手持槽==2) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 2 + 界面变量.inactive_size + ((方法.玩家手持槽<2) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==2) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==2) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==2) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==2) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位4_texture:
-  x: "(方法.玩家手持槽<3) ? 70 : 62"
-  y: "(方法.玩家手持槽==3) ? 8 : 12"
-  width: "(方法.玩家手持槽==3) ? 24 : 16"
-  height: "(方法.玩家手持槽==3) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 3 + 界面变量.inactive_size * 2 + ((方法.玩家手持槽<3) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==3) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==3) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==3) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==3) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位5_texture:
-  x: "(方法.玩家手持槽<4) ? 88 : 80"
-  y: "(方法.玩家手持槽==4) ? 8 : 12"
-  width: "(方法.玩家手持槽==4) ? 24 : 16"
-  height: "(方法.玩家手持槽==4) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 4 + 界面变量.inactive_size * 3 + ((方法.玩家手持槽<4) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==4) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==4) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==4) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==4) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位6_texture:
-  x: "(方法.玩家手持槽<5) ? 106 : 98"
-  y: "(方法.玩家手持槽==5) ? 8 : 12"
-  width: "(方法.玩家手持槽==5) ? 24 : 16"
-  height: "(方法.玩家手持槽==5) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 5 + 界面变量.inactive_size * 4 + ((方法.玩家手持槽<5) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==5) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==5) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==5) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==5) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位7_texture:
-  x: "(方法.玩家手持槽<6) ? 124 : 116"
-  y: "(方法.玩家手持槽==6) ? 8 : 12"
-  width: "(方法.玩家手持槽==6) ? 24 : 16"
-  height: "(方法.玩家手持槽==6) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 6 + 界面变量.inactive_size * 5 + ((方法.玩家手持槽<6) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==6) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==6) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==6) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==6) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位8_texture:
-  x: "(方法.玩家手持槽<7) ? 142 : 134"
-  y: "(方法.玩家手持槽==7) ? 8 : 12"
-  width: "(方法.玩家手持槽==7) ? 24 : 16"
-  height: "(方法.玩家手持槽==7) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 7 + 界面变量.inactive_size * 6 + ((方法.玩家手持槽<7) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==7) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==7) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==7) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==7) ? 'gui/slot_selected.png':'gui/slot.png'"
 槽位9_texture:
-  x: "(方法.玩家手持槽<8) ? 160 : 152"
-  y: "(方法.玩家手持槽==8) ? 8 : 12"
-  width: "(方法.玩家手持槽==8) ? 24 : 16"
-  height: "(方法.玩家手持槽==8) ? 24 : 16"
+  x: "界面变量.margin + 界面变量.gap * 8 + 界面变量.inactive_size * 7 + ((方法.玩家手持槽<8) ? 界面变量.active_size : 界面变量.inactive_size)"
+  y: "(方法.玩家手持槽==8) ? 界面变量.margin : 界面变量.margin_large"
+  width: "(方法.玩家手持槽==8) ? 界面变量.active_size : 界面变量.inactive_size"
+  height: "(方法.玩家手持槽==8) ? 界面变量.active_size : 界面变量.inactive_size"
   texture: "(方法.玩家手持槽==8) ? 'gui/slot_selected.png':'gui/slot.png'"
 
 # 设置物品（_slot后缀为槽位组件）
 槽位1_slot:
-  x: "(方法.玩家手持槽==0) ? 12 : 8"
-  y: "12"
+  x: "(方法.玩家手持槽==0) ? 界面变量.margin_large : 界面变量.margin"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_36"
   enable: false
   drawBackground: false
 槽位2_slot:
-  x: "(方法.玩家手持槽<1) ? 34 : ((方法.玩家手持槽==1) ? 30 : 26)"
-  y: "12"
+  x: "界面变量.gap + ((方法.玩家手持槽<1) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==1) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_37"
   enable: false
   drawBackground: false
 槽位3_slot:
-  x: "(方法.玩家手持槽<2) ? 52 : ((方法.玩家手持槽==2) ? 48 : 44)"
-  y: "12"
+  x: "界面变量.gap * 2 + 界面变量.inactive_size + ((方法.玩家手持槽<2) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==2) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_38"
   enable: false
   drawBackground: false
 槽位4_slot:
-  x: "(方法.玩家手持槽<3) ? 70 : ((方法.玩家手持槽==3) ? 66 : 62)"
-  y: "12"
+  x: "界面变量.gap * 3 + 界面变量.inactive_size * 2 + ((方法.玩家手持槽<3) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==3) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_39"
   enable: false
   drawBackground: false
 槽位5_slot:
-  x: "(方法.玩家手持槽<4) ? 88 : ((方法.玩家手持槽==4) ? 84 : 80)"
-  y: "12"
+  x: "界面变量.gap * 4 + 界面变量.inactive_size * 3 + ((方法.玩家手持槽<4) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==4) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_40"
   enable: false
   drawBackground: false
 槽位6_slot:
-  x: "(方法.玩家手持槽<5) ? 106 : ((方法.玩家手持槽==5) ? 102 : 98)"
-  y: "12"
+  x: "界面变量.gap * 5 + 界面变量.inactive_size * 4 + ((方法.玩家手持槽<5) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==5) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_41"
   enable: false
   drawBackground: false
 槽位7_slot:
-  x: "(方法.玩家手持槽<6) ? 124 : ((方法.玩家手持槽==6) ? 120 : 116)"
-  y: "12"
+  x: "界面变量.gap * 6 + 界面变量.inactive_size * 5 + ((方法.玩家手持槽<6) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==6) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_42"
   enable: false
   drawBackground: false
 槽位8_slot:
-  x: "(方法.玩家手持槽<7) ? 142 : ((方法.玩家手持槽==7) ? 138 : 134)"
-  y: "12"
+  x: "界面变量.gap * 7 + 界面变量.inactive_size * 6 + ((方法.玩家手持槽<7) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==7) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_43"
   enable: false
   drawBackground: false
 槽位9_slot:
-  x: "(方法.玩家手持槽<8) ? 160 : ((方法.玩家手持槽==8) ? 156 : 152)"
-  y: "12"
+  x: "界面变量.gap * 8 + 界面变量.inactive_size * 7 + ((方法.玩家手持槽<8) ? (界面变量.active_size + 界面变量.margin) : (界面变量.inactive_size + ((方法.玩家手持槽==8) ? 界面变量.margin_large : 界面变量.margin)))"
+  y: "界面变量.margin_large"
+  width: "界面变量.inactive_size"
+  height: "界面变量.inactive_size"
   identifier: "container_44"
   enable: false
   drawBackground: false
 
 hotbar_label:
-  x: 84
+  x: "(界面变量.margin + 界面变量.gap * 8 + 界面变量.inactive_size * 8 + 界面变量.active_size) / 2"
   y: 0
+  scale: "界面变量.hotbar_label_scale"
   texts: "方法.是否存在前缀(方法.取物品名(方法.取物品(方法.合并文本('container_',方法.玩家手持槽() + 36))), '§l') == 1 ? 方法.合并文本('&#', 界面变量.r_c, 方法.替换(方法.取物品名(方法.取物品(方法.合并文本('container_',方法.玩家手持槽() + 36))), '§', '&')) : 方法.替换(方法.取物品名(方法.取物品(方法.合并文本('container_',方法.玩家手持槽() + 36))), '§', '&')"
   center: true
   shadow: true
